--- a/app/assets/stylesheets/pages/home.css
+++ b/app/assets/stylesheets/pages/home.css
@@ -1,3 +1,6 @@
+.back-body{
+  background-color: #fcfdf2;
+}
 .home-container {
   display: flex;
   flex-direction: column;
@@ -7,11 +10,11 @@
 }
   
 .logo {
-  margin-bottom: 20px; /* ロゴの下に余白 */
+  margin-bottom: 150px; /* ロゴの下に余白 */
 }
   
 .logo-img {
-  width: 200px; /* ロゴサイズ調整 */
+  width: 400px; /* ロゴサイズ調整 */
   height: auto;
 }
   
